# ttags

./: Cargo.toml  LICENSE  env.sh  manifest.scm
cli/: Cargo.toml
cli/src/: main.rs
lib/: Cargo.toml
lib/src/: lib.rs
lib/src/module_ttags/: mod.rs  tags_cpp.scm  tags_rust.scm  test.cpp
lib/tests/: first.rs
src/: lib.rs  lib_test.rs  main.rs  tags_cpp.scm
src/scm/: tags_cpp.scm
tests/: first.rs  test.cpp
