[package]
name = "ttags"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.15", features = ["derive"] }
globwalk = "0.9.1"
num_cpus = "1.16.0"
rusqlite = { version = "0.30.0", features = ["bundled"] }
#tree-sitter = "0.22.6"
tree-sitter-tags = "0.25.6"
# tree-sitter-c = "0.20.2"
tree-sitter-cpp = "0.23.4"
tree-sitter-rust = "0.24.0"
tree-sitter-python = "0.23.6"
tree-sitter-javascript = "0.23.1"

easy-parallel = "3.3.1"
# flume = "0.11.0"
magic = "0.16.2"
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
#crossbeam = "0.8"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
fst = "0.4"
itertools = "0.13.0"
memmap = "0.7.0"

[dependencies.regex]
version = "1.3"
# default-features = false
# Unless you have a specific reason not to, it's good sense to enable standard
# library support. It enables several optimizations and avoids spin locks. It
# also shouldn't meaningfully impact compile times or binary size.
features = ["std"]

#[profile.release]
#panic = 'abort'

#[profile.dev]
#panic = 'abort'
