[package]
name = "ttags"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = { path = "../lib" }
rusqlite = { version = "0.30.0", features = ["bundled"] }
clap = { version = "3.2.22", features = ["derive"] }
globwalk = "0.8.1"
